--- a/destroiyer.html
+++ b/destroiyer.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Destroiyer</title>
+    <link rel="shortcut icon" href="img/photo_2018-04-26_06-37-23.jpg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Quicksand|Raleway|Tajawal" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
