--- a/destroiyer.html
+++ b/destroiyer.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Destroiyer</title>
-    <link rel="shortcut icon" href="img/photo_2018-04-26_06-37-23.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/photo_2018-04-26_06-37-23.jpg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Quicksand|Raleway|Tajawal" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-
 </head>
 <body>
+         
           <script type="text/javascript">
                 jQuery(function(f){
                         var element = f('#back-top');
                         f(window).scroll(function(){
-                        element['fade'+ (f(this).scrollTop() > 900 ? 'In': 'Out')](500);           
+                        element['fade'+ (f(this).scrollTop() > 300 ? 'In': 'Out')](200);           
                         });
                 });
             </script>
@@ -39,12 +39,14 @@
                });
             </script>
                 <nav id="back-top">
-                <ul class="listnav">
-                    <li><a href="#yak1">about me</a></li>
-                    <li><a href="#yak2">my projects</a></li>
-                    <li><a href="#yak3">follow me</a></li>
+                <ul class="listnav1">
+                    <li class="l"><a href="#yak4" id="a1">home page</a></li>
+                    <li class="l"><a href="#yak1" id="a1">about me</a></li>
+                    <li class="l"><a href="#yak2" id="a1">my projects</a></li>
+                    <li class="l"><a href="#yak3" id="a1">follow me</a></li>
                 </ul>
             </nav>
+            <div id="yak4"></div>
     		<div class="content">
 			<div class="content__container">
 				<p class="content__container__text">
@@ -70,24 +72,24 @@
     </div>
 		<div id="yak1">
 		    <div class="subdiv">
-		       <p class="subt">Designer/WebDesigner</p>
+                <p class="subt2"><span class="span">Designer/WebDesigner</span></p>
 		</div>  
     </div>  
 		<div id="yak2">
 		    <div class="subdiv2">
-		       <p class="subt">DG</p>
-		       <p class="subt">WallPapaper</p>
-               <p class="subt">RE_W</p>
+		       <p class="subt1">DG</p>
+		       <p class="subt1">WallPapaper</p>
+               <p class="subt1">RE_W</p>
 		</div>  
     </div>
           	<div id="yak3">
 		    <div class="subdiv3">
-               <p class="subt">Follow me</p>
-                <p class="subt2"><img src="/img/instagram.png" alt="" class="p"><span class="span"><a id="a" href="https://www.instagram.com/destroiyer_/?hl=uk">Instagram</a></span>
+               <p class="subt2">Follow me</p>
+                <p class="subt2"><img src="img/instagram.png" alt="" class="p"><span class="span"><a id="a" href="https://www.instagram.com/destroiyer_/?hl=uk">Instagram</a></span>
                     <img src="/img/telegram-logo.png" alt="" class="p"><span class="span"><a id="a" href="https://web.telegram.org/#/im?p=c1287901201_12253971911989101602">Telegram</a></span>
-                    <img src="/img/tumblr.png" alt="" class="p"><span class="span"><a id="a" href="https://www.tumblr.com/blog/wallpaper49">Tumblr</a></span></p>
-                      <p class="subt">My mail</p>
-                <p class="subt2"><img src="/img/gmail.png" alt="" class="p"><span class="span">puma37271@gmail.com</span></p>
+                    <img src="img/tumblr.png" alt="" class="p"><span class="span"><a id="a" href="https://www.tumblr.com/blog/wallpaper49">Tumblr</a></span></p>
+                      <p class="subt9">My mail</p>
+                <p class="subt2"><img src="img/gmail.png" alt="" class="p"><span class="span1">puma37271@gmail.com</span></p>
 		</div>  
     </div>  
 </body>
