--- a/destroiyer.html
+++ b/destroiyer.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Quicksand|Raleway|Tajawal" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
          
