--- a/destroiyer.html
+++ b/destroiyer.html
@@ -10,7 +10,7 @@
 </head>
 <body>
          
-          <script type="text/javascript">
+          <script type="text/javascript" id="a1">
                 jQuery(function(f){
                         var element = f('#back-top');
                         f(window).scroll(function(){
@@ -85,11 +85,11 @@
           	<div id="yak3">
 		    <div class="subdiv3">
                <p class="subt2">Follow me</p>
-                <p class="subt2"><img src="img/instagram.png" alt="" class="p"><span class="span"><a id="a" href="https://www.instagram.com/destroiyer_/?hl=uk">Instagram</a></span>
+                <p class="subt2"><img src="/img/instagram.png" alt="" class="p"><span class="span"><a id="a" href="https://www.instagram.com/destroiyer_/?hl=uk">Instagram</a></span>
                     <img src="/img/telegram-logo.png" alt="" class="p"><span class="span"><a id="a" href="https://web.telegram.org/#/im?p=c1287901201_12253971911989101602">Telegram</a></span>
-                    <img src="img/tumblr.png" alt="" class="p"><span class="span"><a id="a" href="https://www.tumblr.com/blog/wallpaper49">Tumblr</a></span></p>
+                    <img src="/img/tumblr.png" alt="" class="p"><span class="span"><a id="a" href="https://www.tumblr.com/blog/wallpaper49">Tumblr</a></span></p>
                       <p class="subt9">My mail</p>
-                <p class="subt2"><img src="img/gmail.png" alt="" class="p"><span class="span1">puma37271@gmail.com</span></p>
+                <p class="subt2"><img src="/img/gmail.png" alt="" class="p"><span class="span1">puma37271@gmail.com</span></p>
 		</div>  
     </div>  
 </body>
