--- a/destroiyer.html
+++ b/destroiyer.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Destroiyer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/img/photo_2018-04-26_06-37-23.jpg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Quicksand|Raleway|Tajawal" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
