--- a/destroiyer.html
+++ b/destroiyer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Destroiyer</title>
-       <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/img/photo_2018-04-26_06-37-23.jpg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Quicksand|Raleway|Tajawal" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
@@ -109,9 +109,11 @@
                 </div>
                      <div>
                       <div class="subt3"><p class="mymail">My mail</p>
+                      <div class="mailp">
                 <p class="subt2"><img src="/img/gmail.png" alt="" class="p">
                 <span class="span1">puma37271@gmail.com</span>
                 </p>
+                          </div>
                 </div>
                 </div>
 		</div>  
