--- a/destroiyer.html
+++ b/destroiyer.html
@@ -110,7 +110,7 @@
                      <div>
                       <div class="subt3"><p class="mymail">My mail</p>
                       <div class="mailp">
-                <p class="subt2"><img src="/img/gmail.png" alt="" class="p">
+                <p class="subt2">
                 <span class="span1">puma37271@gmail.com</span>
                 </p>
                           </div>
