--- a/destroiyer.html
+++ b/destroiyer.html
@@ -90,7 +90,7 @@
     </div>
     <div id="yak1">
 		    <div class="subdiv">
-                <p class="subt2"><span class="span">Designer/WebDesigner</span></p>
+                <p class="subtd"><span class="spanw">Designer/WebDesigner</span></p>
 		</div>  
     </div>  
     <div id="yak2">
